# dolto-story-lib

./: Cargo.toml  test_result.rs
make_story_file/: Cargo.toml  testdata.txt
make_story_file/src/: main.rs
src/: lib.rs  sound_effect.rs  story_base.rs  text_print.rs
