[package]
name = "story_lib"
version = "0.1.59"
edition = "2021"
license = "MIT"
description = "A talking system for dioxus game"

[lib]
path = "src/lib.rs"

[dependencies]
# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
rand = { version = "0.8.5" }
kira = "0.9.4"
# web-sys = { version = "0.3.69", features = ["AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode", "BaseAudioContext", "AudioContextState"] }
# rubato = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.5", features = ["web"] }
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
tokio = { version = "1.39.3", features = ["time"] }
